--- a/The_Sign_Tests.ipynb
+++ b/The_Sign_Tests.ipynb
@@ -510,7 +510,7 @@
     "\n",
     "Let the random variable X denote the number of parts that have diameters above the median of the population (all ground parts), that we shall denote by $m$. It follows that $X \\sim Binom(150, .5)$. We need to test the hypothesis $H_{0}: m = 0$ against $H_{a^{+}}: m \\gt 0$.\n",
     "\n",
-    "**Note**: Because $np > 5$, we can calculate the *p*-Value of the test using the normal approximation."
+    "**Note**: Because $p \\in [.3, .7]$, $np > 5$ and $ n(1-p) > 5$, we can calculate the *p*-Value of the test using the normal approximation."
    ]
   },
   {
