Pearson vs Spearman's rank

--- a/Pearson_vs_Spearmans_Rank_Correlation_Coeficients.ipynb
+++ b/Pearson_vs_Spearmans_Rank_Correlation_Coeficients.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "7e4003e1",
+   "id": "3a23a2c6",
    "metadata": {},
    "source": [
-    "# Pearson versus Spearman's Rank Correlation Coeficient Comparison"
+    "# Comparison Between Pearson correlation coefficient and Spearman's Rank Correlation Coeficients"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "69f7548a",
+   "id": "e84d66ac",
    "metadata": {},
    "source": [
     "## Data Without Outliers"
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 317,
-   "id": "b53f2918",
+   "id": "b7e628da",
    "metadata": {
     "scrolled": true
    },
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f8c01ed1",
+   "id": "fdff9ccd",
    "metadata": {},
    "source": [
     "### Pearson and Spearman's Rank Correlation Coefficients"
@@ -175,7 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": 318,
-   "id": "1297372a",
+   "id": "517d54b8",
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "75bcc674",
+   "id": "8e24f58e",
    "metadata": {},
    "source": [
     "### The Plots"
@@ -207,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": 319,
-   "id": "b73c5275",
+   "id": "d4e94c65",
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1135cf08",
+   "id": "e4ded669",
    "metadata": {},
    "source": [
     "## Data with Outlier"
@@ -243,7 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": 320,
-   "id": "987af494",
+   "id": "9d6a64b1",
    "metadata": {
     "scrolled": true
    },
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7714d67f",
+   "id": "e862a9f6",
    "metadata": {},
    "source": [
     "### Pearson and Spearman Correlation Coefficients"
@@ -396,7 +396,7 @@
   {
    "cell_type": "code",
    "execution_count": 321,
-   "id": "6e522b1c",
+   "id": "0beb7acf",
    "metadata": {},
    "outputs": [
     {
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4c102810",
+   "id": "40f6c041",
    "metadata": {},
    "source": [
     "### The Plots"
@@ -428,7 +428,7 @@
   {
    "cell_type": "code",
    "execution_count": 322,
-   "id": "85f10fce",
+   "id": "3b83f971",
    "metadata": {},
    "outputs": [
     {
@@ -450,17 +450,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "358c4dc0",
+   "id": "1c2ad7f8",
    "metadata": {},
    "source": [
-    "## Takeaways\n",
-    "Pearson correlation coefficient are less resistant to outliers compared to Spearman's rank correlation coefficient. More over, Pearson corr. coef. only measures the leanear association."
+    "## Key Point\n",
+    "The Pearson correlation coefficient is less resistant to outliers compared with the Spearman's rank correlation coefficient. More over, Pearson corr. coef. only measures the leanear association."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d1293b16",
+   "id": "2b07b95f",
    "metadata": {},
    "outputs": [],
    "source": []
