Monotone vs non-monotone

--- a/Monotone_vs_Non-Monotone_Associations.ipynb
+++ b/Monotone_vs_Non-Monotone_Associations.ipynb
@@ -111,6 +111,15 @@
   },
   {
    "cell_type": "markdown",
+   "id": "cc5f9900",
+   "metadata": {},
+   "source": [
+    "### Remarks\n",
+    "Monotone data have their ranks lied on a line."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "33b3f18e",
    "metadata": {},
    "source": [
@@ -330,102 +339,6 @@
     "points(x, y, pch=19, col=rgb(0, 0, 1, .8), cex=.75)\n",
     "abline(lsfit(rank(x), rank(y), intercept=T), col='gray70', lty='dotted')\n",
     "abline(lsfit(rank(x)[-7], rank(y)[-7], intercept=T), col='blue', lty='dotted')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 293,
-   "id": "2f83a0b0",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<ol class=list-inline>\n",
-       "\t<li>1</li>\n",
-       "\t<li>2</li>\n",
-       "\t<li>3</li>\n",
-       "\t<li>4</li>\n",
-       "\t<li>6</li>\n",
-       "\t<li>7</li>\n",
-       "\t<li>8</li>\n",
-       "</ol>\n"
-      ],
-      "text/latex": [
-       "\\begin{enumerate*}\n",
-       "\\item 1\n",
-       "\\item 2\n",
-       "\\item 3\n",
-       "\\item 4\n",
-       "\\item 6\n",
-       "\\item 7\n",
-       "\\item 8\n",
-       "\\end{enumerate*}\n"
-      ],
-      "text/markdown": [
-       "1. 1\n",
-       "2. 2\n",
-       "3. 3\n",
-       "4. 4\n",
-       "5. 6\n",
-       "6. 7\n",
-       "7. 8\n",
-       "\n",
-       "\n"
-      ],
-      "text/plain": [
-       "[1] 1 2 3 4 6 7 8"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<ol class=list-inline>\n",
-       "\t<li>1</li>\n",
-       "\t<li>2</li>\n",
-       "\t<li>3</li>\n",
-       "\t<li>4</li>\n",
-       "\t<li>5</li>\n",
-       "\t<li>6</li>\n",
-       "\t<li>8</li>\n",
-       "</ol>\n"
-      ],
-      "text/latex": [
-       "\\begin{enumerate*}\n",
-       "\\item 1\n",
-       "\\item 2\n",
-       "\\item 3\n",
-       "\\item 4\n",
-       "\\item 5\n",
-       "\\item 6\n",
-       "\\item 8\n",
-       "\\end{enumerate*}\n"
-      ],
-      "text/markdown": [
-       "1. 1\n",
-       "2. 2\n",
-       "3. 3\n",
-       "4. 4\n",
-       "5. 5\n",
-       "6. 6\n",
-       "7. 8\n",
-       "\n",
-       "\n"
-      ],
-      "text/plain": [
-       "[1] 1 2 3 4 5 6 8"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "rank(x)[-7]\n",
-    "rank(y)[-7]"
    ]
   },
   {
