Test of independence

--- a/Test_of_Independence_Of_Two_Variables.ipynb
+++ b/Test_of_Independence_Of_Two_Variables.ipynb
@@ -113,7 +113,7 @@
     "\\textit{p}^{+} = P(r_{s} > r^{*}_{s})\n",
     "\\end{align}\n",
     "\n",
-    "*Note*: Since the Spearman correlation are written in lowercase, I have to abuse the notation in the equation above because random variables are denoted by capital letters.\n",
+    "*Note*: Since the Spearman correlation is written in lower case, I have to abuse the notation in the equation above because random variables are denoted by capital letters.\n",
     "\n",
     "When the number of observations $n$ is large, the distribution of $r_{s}\\sqrt{\\frac{n-2}{ 1 - r_{s}^{2}}}$ is approximately the Student's *$t$*-distribution with $n-2$ degrees of freedom. "
    ]
@@ -274,6 +274,14 @@
    "display_name": "R",
    "language": "R",
    "name": "ir"
+  },
+  "language_info": {
+   "codemirror_mode": "r",
+   "file_extension": ".r",
+   "mimetype": "text/x-r-source",
+   "name": "R",
+   "pygments_lexer": "r",
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
