Association in bivariate quantitative data

--- a/Displaying_and_Summarizing_Association.ipynb
+++ b/Displaying_and_Summarizing_Association.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "98387b1b",
+   "id": "797ec375",
    "metadata": {},
    "source": [
     "## Loading/Installing Packages"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "25fc74fa",
+   "id": "64acce3e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e4aea172",
+   "id": "4599aa75",
    "metadata": {},
    "source": [
     "## Loading Data"
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f3ee16c3",
+   "id": "8f2eb217",
    "metadata": {},
    "source": [
     "## The Scatterplot of the Data"
@@ -107,7 +107,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "9d8af768",
+   "id": "6eb70cdf",
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a5406d9",
+   "id": "72ca8883",
    "metadata": {},
    "source": [
     "## The Scatterplot with Median Trace"
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f0df1660",
+   "id": "69861407",
    "metadata": {},
    "source": [
     "## Scatterplot with Moving Averages"
@@ -318,7 +318,7 @@
   {
    "cell_type": "code",
    "execution_count": 100,
-   "id": "540ca7b1",
+   "id": "ee6aa1e4",
    "metadata": {},
    "outputs": [
     {
@@ -340,17 +340,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c08175c8",
+   "id": "db415370",
    "metadata": {},
    "source": [
     "## Concluding Remarks\n",
-    "The median trace and the running avarage lines both show a negative association between the birthdate and the assigned number."
+    "The median trace and the moving avarage line both show an overall negative association between the birthdate and the assigned number."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4ceea7b3",
+   "id": "81bd1ea6",
    "metadata": {},
    "outputs": [],
    "source": []
