Transforming data in leanear regression model

--- a/Tranforming_Data_in_Leanear_Regression_Model.ipynb
+++ b/Tranforming_Data_in_Leanear_Regression_Model.ipynb
@@ -108,17 +108,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f1d4d71e",
+   "id": "1b8ad9f0",
    "metadata": {},
    "source": [
     "## Scatter Plot of Tranformed Data\n",
-    "Let's examine the scatterplot of $sqrt(StopDist)$ on $Speed$ and observe the pattern."
+    "Let's examine the scatterplot of $sqrt(StopDist)$ on $Speed$ and compare the overall pattern as well as the spread of the data to the previous plot."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 136,
-   "id": "f5321d09",
+   "id": "c258e5c6",
    "metadata": {},
    "outputs": [
     {
