One-way effects model

--- a/One_Way_Effects_Model.ipynb
+++ b/One_Way_Effects_Model.ipynb
@@ -206,7 +206,7 @@
    "id": "fbe6d7ad",
    "metadata": {},
    "source": [
-    "## Assessing the Fi"
+    "## Assessing the Fit"
    ]
   },
   {
@@ -256,7 +256,7 @@
    "id": "1d74eb21",
    "metadata": {},
    "source": [
-    "## Estimation"
+    "## The Estimation"
    ]
   },
   {
