Log-normal arithmetic mean vs. geometric mean

--- a/Geometric_Mean_vs_Arithmetic_Mean_Comparison.ipynb
+++ b/Geometric_Mean_vs_Arithmetic_Mean_Comparison.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "7ccccd19",
+   "id": "5ae212fa",
    "metadata": {},
    "source": [
     "## Motivating Problem\n",
@@ -10,9 +10,9 @@
     "\n",
     "> You simulate a lot of $lognormal(5,1)$ random variables and take their mean. What is this number closest to?\n",
     "\n",
-    "And there are two potential options for the question are $e^{\\mu + .5}$ and $e^{\\mu}$ where $\\mu = 5$.\n",
+    "And there are two valid options for the question are $e^{\\mu + .5}$ and $e^{\\mu}$ where $\\mu = 5$.\n",
     "\n",
-    "Why two optioRecall that the geometric mean is always less than or equal to the arithmetic mean, or symbolically:\n",
+    "Why are the two options are valid? Recall that the geometric mean is always less than or equal to the arithmetic mean, or symbolically:\n",
     "\n",
     "\\begin{align}\n",
     "\\left( \\prod_{i=1}^{n}x_i \\right)^{1/n} \\le \\frac{\\sum_{i=1}^{n}x_i}{n}.\n",
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "12e3949a",
+   "id": "f6d16b5f",
    "metadata": {},
    "source": [
     "## Sampling Data of $L_{X}$"
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "44e8cd1b",
+   "id": "d7631c8f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "af26644d",
+   "id": "cbe57cc7",
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "8f592e01",
+   "id": "8eed75c7",
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "45db3ae0",
+   "id": "c5dba55d",
    "metadata": {},
    "source": [
     "## The Corresponding Sampling Data of $X$"
@@ -173,7 +173,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "0ae5645c",
+   "id": "ad05cae2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "0267c465",
+   "id": "17e624e2",
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +204,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "57a2f283",
+   "id": "add7635d",
    "metadata": {},
    "outputs": [
     {
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bbfc87c9",
+   "id": "928f3061",
    "metadata": {},
    "source": [
     "## Comparing the Results"
@@ -310,7 +310,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "500ec265",
+   "id": "f4d7264c",
    "metadata": {},
    "outputs": [
     {
@@ -330,17 +330,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "261e4c8d",
+   "id": "b6ed73b5",
    "metadata": {},
    "source": [
     "## Conclusion\n",
-    "From the empirical results, it's reasonable to choose the option $e^{\\mu + .5}$."
+    "From the empirical results, it's reasonable to choose the option $e^{\\mu + .5}$. Can we answer the question without the aid of computer?"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cd5027b8",
+   "id": "e1329e0c",
    "metadata": {},
    "outputs": [],
    "source": []
