Log-normal arithmetic mean vs. geometric mean

--- a/Geometric_Mean_vs_Arithmetic_Mean_Comparison.ipynb
+++ b/Geometric_Mean_vs_Arithmetic_Mean_Comparison.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5ae212fa",
+   "id": "ac9551a8",
    "metadata": {},
    "source": [
     "## Motivating Problem\n",
@@ -12,10 +12,10 @@
     "\n",
     "And there are two valid options for the question are $e^{\\mu + .5}$ and $e^{\\mu}$ where $\\mu = 5$.\n",
     "\n",
-    "Why are the two options are valid? Recall that the geometric mean is always less than or equal to the arithmetic mean, or symbolically:\n",
+    "Why are the two options are valid? Recall that, for a list of nonnegative real numbers, the geometric mean is always less than or equal to the arithmetic mean, or symbolically:\n",
     "\n",
     "\\begin{align}\n",
-    "\\left( \\prod_{i=1}^{n}x_i \\right)^{1/n} \\le \\frac{\\sum_{i=1}^{n}x_i}{n}.\n",
+    "\\left( \\prod_{i=1}^{n}x_i \\right)^{1/n} \\le \\frac{\\sum_{i=1}^{n}x_i}{n}, \\s\\s \\forall x_{i} \\ge 0.\n",
     "\\end{align}\n",
     "\n",
     "Where the quantity of the left side of the inequality is the geometric mean or $e^{\\mu}$ in this case and the right-side quantity is the arithmetic mean or the mean of the sampling data of the log-normal variable.\n",
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f6d16b5f",
+   "id": "624049ee",
    "metadata": {},
    "source": [
     "## Sampling Data of $L_{X}$"
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "d7631c8f",
+   "id": "4821bfab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "cbe57cc7",
+   "id": "d2e3de3f",
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "8eed75c7",
+   "id": "f8cab7d4",
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c5dba55d",
+   "id": "5dd02512",
    "metadata": {},
    "source": [
     "## The Corresponding Sampling Data of $X$"
@@ -173,7 +173,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "ad05cae2",
+   "id": "f0d651b7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "17e624e2",
+   "id": "507afd73",
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +204,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "add7635d",
+   "id": "3d13eb8f",
    "metadata": {},
    "outputs": [
     {
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "928f3061",
+   "id": "5ddb536f",
    "metadata": {},
    "source": [
     "## Comparing the Results"
@@ -310,7 +310,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "f4d7264c",
+   "id": "9e07f016",
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b6ed73b5",
+   "id": "a8cb7d3e",
    "metadata": {},
    "source": [
     "## Conclusion\n",
@@ -340,7 +340,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e1329e0c",
+   "id": "f9c51c24",
    "metadata": {},
    "outputs": [],
    "source": []
