Log-normal arithmetic mean vs. geometric mean

--- a/Geometric_Mean_vs_Arithmetic_Mean_Comparison.ipynb
+++ b/Geometric_Mean_vs_Arithmetic_Mean_Comparison.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ac9551a8",
+   "id": "3846fe12",
    "metadata": {},
    "source": [
     "## Motivating Problem\n",
@@ -15,17 +15,17 @@
     "Why are the two options are valid? Recall that, for a list of nonnegative real numbers, the geometric mean is always less than or equal to the arithmetic mean, or symbolically:\n",
     "\n",
     "\\begin{align}\n",
-    "\\left( \\prod_{i=1}^{n}x_i \\right)^{1/n} \\le \\frac{\\sum_{i=1}^{n}x_i}{n}, \\s\\s \\forall x_{i} \\ge 0.\n",
+    "\\left( \\prod_{i=1}^{n}x_i \\right)^{1/n} \\le \\frac{\\sum_{i=1}^{n}x_i}{n}, \\; \\forall x_{i} \\ge 0, i=0, 1,..., n.\n",
     "\\end{align}\n",
     "\n",
-    "Where the quantity of the left side of the inequality is the geometric mean or $e^{\\mu}$ in this case and the right-side quantity is the arithmetic mean or the mean of the sampling data of the log-normal variable.\n",
+    "To apply the inequality into the problem, notice that the quantity of the left side of the inequality is the geometric mean or $e^{\\mu}$ in this case and the right-side quantity is the arithmetic mean or the mean of the sampling data of the log-normal variable.\n",
     "\n",
     "Let's verify each of those options by employing simulation. For this purpose, let the random variable $L_{X}\\sim N(5,1)$, then $X = e^{L_{X}}$ is a log-normal RV."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "624049ee",
+   "id": "fc3b5fde",
    "metadata": {},
    "source": [
     "## Sampling Data of $L_{X}$"
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "4821bfab",
+   "id": "582a7e5b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "d2e3de3f",
+   "id": "bad77ec4",
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "f8cab7d4",
+   "id": "9deaa43f",
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5dd02512",
+   "id": "8e0a9839",
    "metadata": {},
    "source": [
     "## The Corresponding Sampling Data of $X$"
@@ -173,7 +173,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "f0d651b7",
+   "id": "1015bd56",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "507afd73",
+   "id": "abdfe4d2",
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +204,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "3d13eb8f",
+   "id": "a01141ad",
    "metadata": {},
    "outputs": [
     {
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5ddb536f",
+   "id": "5271d566",
    "metadata": {},
    "source": [
     "## Comparing the Results"
@@ -310,7 +310,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "9e07f016",
+   "id": "848123e8",
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a8cb7d3e",
+   "id": "0b50eef7",
    "metadata": {},
    "source": [
     "## Conclusion\n",
@@ -340,7 +340,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f9c51c24",
+   "id": "52e66f65",
    "metadata": {},
    "outputs": [],
    "source": []
