Regression through the origin

--- a/Regression_Through_the_Origin.ipynb
+++ b/Regression_Through_the_Origin.ipynb
@@ -2,7 +2,62 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "27ce59bb",
+   "id": "616cfc6f",
+   "metadata": {},
+   "source": [
+    "## The Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "id": "113aaa29",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<thead><tr><th></th><th scope=col>mpg</th><th scope=col>cyl</th><th scope=col>disp</th><th scope=col>hp</th><th scope=col>drat</th><th scope=col>wt</th><th scope=col>qsec</th><th scope=col>vs</th><th scope=col>am</th><th scope=col>gear</th><th scope=col>carb</th></tr></thead>\n",
+       "<tbody>\n",
+       "\t<tr><th scope=row>Mazda RX4</th><td>21   </td><td>6    </td><td>160  </td><td>110  </td><td>3.9  </td><td>2.620</td><td>16.46</td><td>0    </td><td>1    </td><td>4    </td><td>4    </td></tr>\n",
+       "\t<tr><th scope=row>Mazda RX4 Wag</th><td>21   </td><td>6    </td><td>160  </td><td>110  </td><td>3.9  </td><td>2.875</td><td>17.02</td><td>0    </td><td>1    </td><td>4    </td><td>4    </td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "\\begin{tabular}{r|lllllllllll}\n",
+       "  & mpg & cyl & disp & hp & drat & wt & qsec & vs & am & gear & carb\\\\\n",
+       "\\hline\n",
+       "\tMazda RX4 & 21    & 6     & 160   & 110   & 3.9   & 2.620 & 16.46 & 0     & 1     & 4     & 4    \\\\\n",
+       "\tMazda RX4 Wag & 21    & 6     & 160   & 110   & 3.9   & 2.875 & 17.02 & 0     & 1     & 4     & 4    \\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "| <!--/--> | mpg | cyl | disp | hp | drat | wt | qsec | vs | am | gear | carb |\n",
+       "|---|---|---|---|---|---|---|---|---|---|---|---|\n",
+       "| Mazda RX4 | 21    | 6     | 160   | 110   | 3.9   | 2.620 | 16.46 | 0     | 1     | 4     | 4     |\n",
+       "| Mazda RX4 Wag | 21    | 6     | 160   | 110   | 3.9   | 2.875 | 17.02 | 0     | 1     | 4     | 4     |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "              mpg cyl disp hp  drat wt    qsec  vs am gear carb\n",
+       "Mazda RX4     21  6   160  110 3.9  2.620 16.46 0  1  4    4   \n",
+       "Mazda RX4 Wag 21  6   160  110 3.9  2.875 17.02 0  1  4    4   "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "head(mtcars, 2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0ec2e45c",
    "metadata": {},
    "source": [
     "## Before Centering"
@@ -10,44 +65,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
-   "id": "ea4f72ba",
+   "execution_count": 113,
+   "id": "7fb6056f",
    "metadata": {},
    "outputs": [],
    "source": [
     "y = mtcars$mpg\n",
-    "x = mtcars$wt"
+    "x1 = mtcars$wt\n",
+    "x2 = mtcars$hp"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
-   "id": "94b560ef",
+   "execution_count": 114,
+   "id": "f84151b9",
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "ename": "ERROR",
-     "evalue": "Error in model.frame.default(formula = y ~ c(x, x), drop.unused.levels = TRUE): variable lengths differ (found for 'c(x, x)')\n",
-     "output_type": "error",
-     "traceback": [
-      "Error in model.frame.default(formula = y ~ c(x, x), drop.unused.levels = TRUE): variable lengths differ (found for 'c(x, x)')\nTraceback:\n",
-      "1. lm(y ~ c(x, x))",
-      "2. eval(mf, parent.frame())",
-      "3. eval(mf, parent.frame())",
-      "4. stats::model.frame(formula = y ~ c(x, x), drop.unused.levels = TRUE)",
-      "5. model.frame.default(formula = y ~ c(x, x), drop.unused.levels = TRUE)"
-     ]
+     "data": {
+      "text/plain": [
+       "\n",
+       "Call:\n",
+       "lm(formula = y ~ x1 + x2)\n",
+       "\n",
+       "Coefficients:\n",
+       "(Intercept)           x1           x2  \n",
+       "   37.22727     -3.87783     -0.03177  \n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "lm(y ~ c(x,x ))"
+    "lm(y ~ x1 + x2)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "ab2eb41a",
+   "id": "3fe2ee21",
    "metadata": {},
    "source": [
     "## Regression Through the Origin on Centering Data"
@@ -55,8 +113,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
-   "id": "a35b946f",
+   "execution_count": 115,
+   "id": "8970453c",
    "metadata": {},
    "outputs": [
     {
@@ -64,11 +122,11 @@
       "text/plain": [
        "\n",
        "Call:\n",
-       "lm(formula = yc ~ xc - 1)\n",
+       "lm(formula = yc ~ x1c + x2c - 1)\n",
        "\n",
        "Coefficients:\n",
-       "    xc  \n",
-       "-5.344  \n"
+       "     x1c       x2c  \n",
+       "-3.87783  -0.03177  \n"
       ]
      },
      "metadata": {},
@@ -77,13 +135,14 @@
    ],
    "source": [
     "yc = y - mean(y)\n",
-    "xc = x - mean(x)\n",
-    "lm(yc ~ xc - 1)"
+    "x1c = x1 - mean(x1)\n",
+    "x2c = x2 - mean(x2)\n",
+    "lm(yc ~ x1c + x2c - 1)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "49b0652b",
+   "id": "447a1b86",
    "metadata": {},
    "source": [
     "## Some Useful Equalities\n",
@@ -110,7 +169,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "68534991",
+   "id": "faab6845",
    "metadata": {},
    "source": [
     "### Examples"
@@ -119,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "e12003ec",
+   "id": "bdaeec1e",
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "9d1641bb",
+   "id": "195f8604",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +229,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "0df47e4f",
+   "id": "192c5682",
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +284,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "a0bfbc45",
+   "id": "f078228a",
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +323,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "bff13892",
+   "id": "48aa2305",
    "metadata": {},
    "outputs": [
     {
@@ -318,7 +377,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "acf1f240",
+   "id": "8c099c66",
    "metadata": {},
    "outputs": [
     {
@@ -372,7 +431,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "fca70ad0",
+   "id": "b87e9cca",
    "metadata": {},
    "outputs": [
     {
@@ -411,7 +470,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "58b43eaf",
+   "id": "5b70d54a",
    "metadata": {},
    "outputs": [
     {
@@ -450,7 +509,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "db444a80",
+   "id": "d2349b19",
    "metadata": {},
    "outputs": [
     {
@@ -488,7 +547,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17c2bb16",
+   "id": "8f62f469",
    "metadata": {},
    "outputs": [],
    "source": []
